Hot style fixes created gaps between buttons

--- a/src/components/payment-form/payment-form.styles.scss
+++ b/src/components/payment-form/payment-form.styles.scss
@@ -1,8 +1,11 @@
 .payment-form {
   width: 40%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 
   .payment-form__button {
     display: flex;
