--- a/src/components/popup/popup.styles.scss
+++ b/src/components/popup/popup.styles.scss
@@ -19,6 +19,7 @@
       display: flex;
       justify-content: space-around;
       margin-top: 30px;
+      gap: 30px;
 
       @media only screen and ($phone) {
         gap: 20px;
