--- a/src/routes/authentification/sign-in-form/sign-in-form.styles.scss
+++ b/src/routes/authentification/sign-in-form/sign-in-form.styles.scss
@@ -7,6 +7,7 @@
   .sign-in__form_buttons {
     display: flex;
     justify-content: space-between;
+    gap: 30px;
 
 
     @media only screen and ($phone) {
